[gd_scene load_steps=14 format=3 uid="uid://bj44dvpiorjv0"]

[ext_resource type="Script" path="res://npc.gd" id="1_lckfr"]
[ext_resource type="PackedScene" uid="uid://bkc20x4kcb1av" path="res://talk_system.tscn" id="2_aqxcf"]
[ext_resource type="Texture2D" uid="uid://beyspk22f18gr" path="res://eye texture Background Removed.png" id="2_fwk1u"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8b8l1"]
albedo_color = Color(0.631373, 0.415686, 0.168627, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_183qv"]
material = SubResource("StandardMaterial3D_8b8l1")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rnv36"]
albedo_texture = ExtResource("2_fwk1u")
uv1_scale = Vector3(1.605, 1.535, 1.585)
uv1_offset = Vector3(0.07, -0.25, 2.08165e-12)

[sub_resource type="SphereMesh" id="SphereMesh_ulkec"]
material = SubResource("StandardMaterial3D_rnv36")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_munn4"]
albedo_color = Color(0.811765, 0.345098, 0.266667, 1)

[sub_resource type="TorusMesh" id="TorusMesh_v0kpp"]
material = SubResource("StandardMaterial3D_munn4")

[sub_resource type="BoxShape3D" id="BoxShape3D_7owiw"]

[sub_resource type="Animation" id="Animation_fofvo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/mouth:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.103723, 0.103723, 0.103723)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_l2jfl"]
resource_name = "talking"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/mouth:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.126272, 0.242707),
"transitions": PackedFloat32Array(1, 1, 2.21914),
"update": 0,
"values": [Vector3(0.103723, 0.103723, 0.103723), Vector3(0.00743654, 0.103, 0.103723), Vector3(0.103723, 0.103723, 0.103723)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.175761),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.07177, 0.840887, 1.15752)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7k8hx"]
_data = {
"RESET": SubResource("Animation_fofvo"),
"talking": SubResource("Animation_l2jfl")
}

[node name="NPC" type="Node3D"]
script = ExtResource("1_lckfr")

[node name="Body" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_183qv")

[node name="r_eye" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.261303, 0, -0.0422984, 0, 0.264704, 0, 0.0422984, 0, 0.261303, 0.425649, 0.440598, 0.0854789)
mesh = SubResource("SphereMesh_ulkec")

[node name="l_eye" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.264627, 0, 0.00638878, 0, 0.264704, 0, -0.00638878, 0, 0.264627, 0.401121, 0.440598, -0.144458)
mesh = SubResource("SphereMesh_ulkec")

[node name="mouth" type="MeshInstance3D" parent="Body"]
transform = Transform3D(-0.00077842, 0.10372, 0, -0.10372, -0.00077842, 0, 0, 0, 0.103723, 0.50717, 0.17295, -0.024581)
mesh = SubResource("TorusMesh_v0kpp")

[node name="npc_collision" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="npc_collision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.749185, 0, 0)
shape = SubResource("BoxShape3D_7owiw")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(0.100032, 0, 0.994984, 0, 1, 0, -0.994984, 0, 0.100032, 0.716009, 0.837172, 0)
visible = false
billboard = 2
text = "Press E To Talk!"

[node name="talk_system" parent="." instance=ExtResource("2_aqxcf")]
visible = false

[node name="npc_cam" type="Camera3D" parent="."]
transform = Transform3D(0.0303641, 0, 0.999539, 0, 1, 0, -0.999539, 0, 0.0303641, 1.74046, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7k8hx")
}

[connection signal="num_of_questions_remaining" from="." to="talk_system" method="_on_npc_num_of_questions_remaining"]
[connection signal="q_choices" from="." to="talk_system" method="_on_npc_q_choices"]
[connection signal="q_prob" from="." to="talk_system" method="_on_npc_q_prob"]
[connection signal="area_shape_entered" from="npc_collision" to="." method="_on_npc_collision_area_shape_entered"]
[connection signal="area_shape_exited" from="npc_collision" to="." method="_on_npc_collision_area_shape_exited"]
[connection signal="update_prob" from="talk_system" to="." method="_on_talk_system_update_prob"]
